# schema/openapi/openapi.yaml
@@ -1408,6 +1408,12 @@ components:
         description:
           nullable: true
           type: string
+        cap_per_claim:
+          nullable: true
+          type: string
+        cap_per_month:
+          nullable: true
+          type: string
         metadata:
           type: object
 
@@ -1445,6 +1451,12 @@ components:
         description:
           nullable: true
           type: string
+        cap_per_claim:
+          nullable: true
+          type: string
+        cap_per_month:
+          nullable: true
+          type: string
         metadata:
           type: object
 
@@ -1469,6 +1481,12 @@ components:
         description:
           nullable: true
           type: string
+        cap_per_claim:
+          nullable: true
+          type: string
+        cap_per_month:
+          nullable: true
+          type: string
         metadata:
           type: object
 
@@ -1486,6 +1504,12 @@ components:
           nullable: true
           type: string
         description:
+          nullable: true
+          type: string
+        cap_per_claim:
+          nullable: true
+          type: string
+        cap_per_month:
           nullable: true
           type: string
         metadata:
